--- a/miniapp/src/pages/majors/intended/index.less
+++ b/miniapp/src/pages/majors/intended/index.less
@@ -816,7 +816,8 @@
 
 // 高考信息对话框样式
 .exam-info-dialog {
-  max-width: 90vw;
+  width: 100%;
+  max-width: calc(100% - 64rpx);
   max-height: 90vh;
   overflow-y: auto;
 }
