修改高考信息和分数区间的问题

--- a/miniapp/src/pages/majors/intended/index.less
+++ b/miniapp/src/pages/majors/intended/index.less
@@ -195,6 +195,29 @@
   }
 }
 
+.intended-majors-page__slider-label-range-inputs {
+  display: flex;
+  align-items: center;
+  gap: 8rpx;
+}
+
+.intended-majors-page__slider-label-input {
+  width: 80rpx;
+  height: 48rpx;
+  font-size: 24rpx;
+  text-align: center;
+  border: 1rpx solid #d1d5db;
+  border-radius: 4rpx;
+  padding: 0 8rpx;
+  background: #fff;
+}
+
+.intended-majors-page__slider-label-separator {
+  font-size: 24rpx;
+  color: #666;
+  margin: 0 4rpx;
+}
+
 .intended-majors-page__content {
   flex: 1;
   padding: 32rpx 16rpx;
@@ -817,7 +840,7 @@
 // 高考信息对话框样式
 .exam-info-dialog {
   width: 100%;
-  max-width: calc(100% - 64rpx);
+  max-width: calc(100% - 32rpx);
   max-height: 90vh;
   overflow-y: auto;
 }
