--- a/miniapp/src/pages/index/index.less
+++ b/miniapp/src/pages/index/index.less
@@ -175,6 +175,8 @@
 .index-page__card-title-section {
   flex: 1;
   min-width: 0;
+  display: flex;
+  flex-direction: column;
 }
 
 .index-page__card-title {
