--- a/miniapp/src/pages/assessment/popular-majors/index.less
+++ b/miniapp/src/pages/assessment/popular-majors/index.less
@@ -834,8 +834,8 @@
 }
 
 // 针对专业匹配度测评对话框容器，增大尺寸
-// 使用 :global 来覆盖 Dialog 组件的样式
-:global {
+// 使用后代选择器，只针对热门专业测评对话框
+.popular-majors-page__dialog-wrapper {
   // 当对话框包含 popular-majors-page__dialog 时，增大容器尺寸
   .ui-dialog__content {
     // iOS 低版本关键修复：父容器必须有明确的高度
