添加乐学善学阻止厌学注释和显示方式

--- a/miniapp/src/pages/assessment/single-major/index.less
+++ b/miniapp/src/pages/assessment/single-major/index.less
@@ -626,6 +626,12 @@
     white-space: nowrap;
   }
 
+  &__element-inline-title-desc {
+    font-size: 22rpx;
+    font-weight: 400;
+    color: #000;
+  }
+
   &__element-inline-toggle {
     font-size: 24rpx;
     color: #1A4099;
